[tool.poetry]
name = "pmemo"
version = "0.3.0"
description = "Pmemo is a command-line memo editor designed for seamless editing directly in the terminal environment. It offers a range of features to enhance your memo-taking experience and leverages the power of OpenAI's ChatGPT."
authors = ["Asugawara <asgasw@gmail.com>"]
readme = "README.md"
packages = [{include = "pmemo"}]

[tool.poetry.scripts]
pm = "pmemo.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pygments = "^2.15.1"
prompt-toolkit = "^3.0.38"
rich = "^13.3.5"
pydantic = "^1.10.7"
openai = "^0.27.7"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
types-pygments = "^2.15.0.1"
pre-commit = "^3.3.2"

[tool.isort]
profile = "black"

[mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
