[tool.poetry]
name = "pmemo"
version = "0.3.1"
description = "Pmemo is a command-line memo editor designed for seamless editing directly in the terminal environment. It offers a range of features to enhance your memo-taking experience and leverages the power of OpenAI's ChatGPT."
authors = ["Asugawara <asgasw@gmail.com>"]
readme = "README.md"
packages = [{include = "pmemo"}]
homepage = "https://github.com/Asugawara/pmemo"
repository = "https://github.com/Asugawara/pmemo"
license = "MIT"
keywords = [
  "memo",
  "TUI",
]
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.scripts]
pm = "pmemo.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pygments = "^2.17.1"
prompt-toolkit = "^3.0.43"
rich = "^13.7.0"
pydantic = "^2.5.3"
openai = "^0.27.10"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.3"
types-pygments = "^2.17.0.0"
pre-commit = "^3.5.0"

[tool.isort]
profile = "black"

[mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
